--- a/.github/workflows/ninjaone-ci.yml
+++ b/.github/workflows/ninjaone-ci.yml
@@ -33,4 +33,4 @@ jobs:
         run: mvn clean install
 
       - name: Run Test
-        run: mvn test
+        run: mvn test -Dbrowser=chromeHeadless
